# tcs-cosheaf

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  pyproject.toml  tmp_actions_import.txt
.github/: pull_request_template.md
context/: CURRENT_MILESTONE.md  INTERFACE_REGISTRY.md  PROJECT_STATE.md
cosheaf/: __init__.py  benchmark.py  cli.py  compare.py  context_cli.py  gap_cli.py  reports.py  validation_cli.py
docs/: AGENT_ACCESS.md  AGENT_HANDOFF_2026-06-17.md  AGENT_PROVIDERS.md  AGENT_ROLES.md  AI_MATH_COLLABORATOR_MVP.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  ARCHITECTURE_REFACTOR_AUDIT.md  ARTIFACT_LIFECYCLE.md  ARTIFACT_LIFECYCLE.zh-CN.md  ARTIFACT_SCHEMA.md  ARTIFACT_SCHEMA.zh-CN.md  AUTH.md  AUTHORITY_BOUNDARIES.md  BENCHMARKS.md  CAMPAIGNS.md  CHECKED_COUNTEREXAMPLES.md  CHECKERS.md  CODEX_DEVELOPMENT_PLAN.md  CODEX_DEVELOPMENT_PLAN_V10.md  CODEX_DEVELOPMENT_PLAN_V11.md  CODEX_DEVELOPMENT_PLAN_V12.md  CODEX_DEVELOPMENT_PLAN_V14.md  CODEX_DEVELOPMENT_PLAN_V15.md  CODEX_DEVELOPMENT_PLAN_V16.md  CODEX_DEVELOPMENT_PLAN_V17.md  CODEX_DEVELOPMENT_PLAN_V18.md  CODEX_DEVELOPMENT_PLAN_V3.md  CODEX_DEVELOPMENT_PLAN_V4.md  CODEX_DEVELOPMENT_PLAN_V5.md  CODEX_DEVELOPMENT_PLAN_V6.md  CODEX_DEVELOPMENT_PLAN_V7.md  CODEX_DEVELOPMENT_PLAN_V8.md  CODEX_DEVELOPMENT_PLAN_V9.md  CODEX_OPERATOR_RUNBOOK.md  CODEX_STATE_AUDIT.md  CODEX_WORKFLOW.md  CODEX_WORKFLOW.zh-CN.md  CODE_AUDIT_V040.md  COMPARISONS.md  (+72 more)
formal-libs/: lean-libraries.example.yaml
schemas/: artifact.schema.json  attempt_evidence_summary.schema.json  (+39 more)
(+504 files in other folders)
