[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcs-cosheaf"
version = "0.6.0"
description = "Git-backed research knowledge base and agent harness for theoretical computer science."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "TCS-Cosheaf contributors" },
]
dependencies = [
  "pydantic>=2,<3",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.8,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
cosheaf = "cosheaf.cli:app"

[tool.setuptools.packages.find]
include = ["cosheaf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
